# satrepo

./: .gitignore  .pre-commit-config.yaml  CHARTER.md  PLAN.md  README.md  pyproject.toml
docs/: remote-signing-pds.md
src/satproto/: __init__.py
src/satrepo/: __init__.py  bsky.py  cli.py  config.py  did_plc.py  errors.py  init_repo.py  jsonio.py  keys.py  manifest.py  paths.py  plc.py  porcelain.py  publish.py  remote_signer.py  rkeys.py  standard_site.py  static_site.py  storage_static.py  verify.py  worktree.py
src/satrepo_shim/: __init__.py  firehose.py  origin.py  repo_view.py  server.py
tests/: test_bsky.py  test_did_plc.py  test_init_repo.py  test_plc.py  test_porcelain.py  test_publish.py  test_remote_signer.py  test_shim_xrpc.py  test_standard_site.py  test_worktree.py
workers/cloudflare-shim/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
workers/cloudflare-shim/src/: index.ts
workers/edge-shim/: README.md  package-lock.json  package.json
workers/edge-shim/src/: index.ts
