[project]
name = "satrepo"
version = "0.1.0"
description = "Static ATProto repo authoring and sync shim prototype"
readme = "README.md"
authors = [
    { name = "Hiina Kuukan", email = "hiina@hiina.space" }
]
requires-python = ">=3.12"
dependencies = [
    "arroba",
    "typer>=0.25.1",
]

[project.scripts]
satrepo = "satrepo.cli:main"
satrepo-shim = "satrepo_shim.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
